--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
         <!-- Menyisipkan Vuejs -->
-        <script src="js/vue_2.6.12.js"></script>
+        <script src="vue_2.6.12.js"></script>
     </head>
     <body>
 
